# pwc-task-backend

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
company/: settings.py  urls.py
employees/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
employees/migrations/: 0001_initial.py
